# InstrumentsForAI

./: CMakeLists.txt  kernel.cl  main.c  matrix.c  matrix.h  opencl.c  simple_threads.c  thread_queue.c
